# tinytools

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: pre-commit-fix.yaml
src/tinytools/: __init__.py  archives.py  array_ops.py  camera.py  draw_annotations.py  image.py  imports.py  litellm.py  logger.py  mask_bbox_tools.py  meshes.py  metaclasses.py  process_annotations.py  suppressors.py  torch.py  tqdm.py  transforms.py  validate.py  video.py  vllm.py
src/tinytools/input_prepare/: __init__.py  bounding_boxes.py  images.py  intrinsics.py  pointmaps.py  utils.py
src/tinytools/threeD/: __init__.py  camera.py  coordinate_converions.py  coordinate_conversions.py  mesh_conversions.py  mesh_operations.py  pose3d.py  pose_target.py  transforms.py  utils.py
src/tinytools/torch/: __init__.py  utils.py
src/tinytools/torch/modules/: __init__.py  constant_layer.py  ff_block.py  gated_mlp.py  location_head.py  vanilla_mlp.py
src/tinytools/video/: __init__.py  file_video_stream.py
src/tinytools/vlm/: litellm.py  openai.py  vllm.py
tests/: test_archives.py  test_pose_target.py  test_vlm_openai.py
