[project]
name = "tinytools"
version = "0.1.0"
description = "A small collection of tools for common functionality."
keywords = ["tools"]
readme = "README.md"
authors = [{ name = "alex-bene", email = "alexandrosbene@gmail.com" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = ["imageio>=2.35.1", "numpy>=1.24.4", "rich>=14.1.0"]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/alex-bene/tinytools"
Repository = "https://github.com/alex-bene/tinytools"
