[project]
name = "tinytools"
version = "0.1.0"
description = "A small collection of tools for common functionality."
keywords = ["tools"]
readme = "README.md"
authors = [{ name = "alex-bene", email = "alexandrosbene@gmail.com" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "imageio[ffmpeg]",
    "matplotlib",
    "numpy",
    "opencv-python-headless>=4.11",
    "rich",
    "tqdm",
]

[project.optional-dependencies]
3d = ["torch", "pytorch3d", "trimesh"]
llm = [
    "litellm>=1.41.2",
    "vllm>=v0.8.5",
    "jsonschema>=4.25.1",
    "dotenv",
    "openai>=1.101.0",
]
torch = ["torch"]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.13.3", "pre-commit>=3.7.1"]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/alex-bene/tinytools"
Repository = "https://github.com/alex-bene/tinytools"

[tool.pyright]
exclude = ["**/__pycache__", "**/.*"]
typeCheckingMode = "off"
